k8s-configs/development/ingress/posts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: posts-ingress
  namespace: development
spec:
  tls:
    - secretName: development-posts-com-tls
      hosts:
        - development.posts.com
  rules:
  - host: development.posts.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rest-internal-service
            port: 
              number: 80
  ingressClassName: nginx

---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata: 
  name: nginx
  namespace: development
spec:
  controller: k8s.io/ingress-nginx
